added styled button for switching relative, fixed databaseconfig no exist path/connection

--- a/TagSystemViewer/Resources/Fonts/IcoMoon.axaml
+++ b/TagSystemViewer/Resources/Fonts/IcoMoon.axaml
@@ -42,4 +42,6 @@
     
     <system:String x:Key="IcoMoonShowDown">&#xe902;</system:String>
     <system:String x:Key="IcoMoonHideUp">&#xe903;</system:String>
+    
+    <system:String x:Key="IcoMoonRelative">&#xe922;</system:String>
 </ResourceDictionary>
