--- a/TagSystemViewer/Resources/ToolTips.axaml
+++ b/TagSystemViewer/Resources/ToolTips.axaml
@@ -60,4 +60,6 @@
     <system:String x:Key="MoveFileTip">Позначити файл для переміщення в нове місце.
 Шлях до файлу буде автоматично оновлено. Переміщення буде при прийнятті змін
 Не спрацює для веб-файлів</system:String>
+    <system:String x:Key="RelativeFileTip">Позначити файл для зміни шляху на відносний або навпаки.
+Відображатися шлях буде так само, але зберігатися буде у вигляді, відносному до шляху бази даних</system:String>
 </ResourceDictionary>
